--- a/informacoes.html
+++ b/informacoes.html
@@ -31,7 +31,7 @@
                 <h3 class="titulo">DEMOLIDOR</h3>
                 <p class="enredo">Quando criança, Matt Murdock ficou cego por um vazamento químico em um acidente estranho. Em vez de limitá-lo, deu-lhe sentidos sobre-humanos que o capacitaram a ver o mundo de uma forma única e poderosa. Agora ele usa esses poderes para fazer justiça, não apenas como advogado em seu próprio escritório de advocacia, mas também como vigilante à noite, espreitando as ruas de Hell's Kitchen como o aventureiro, o homem sem medo.</p>
                 <p class="genero">Gêneros: Açao, Crime, Drama, Fantasia, Ficção Científica, Filme de ação.</p>
-                <p class="classificacao">Classificação indicativa: <img class="icon" src="img/icon.png" alt=""></p>
+                <p class="classificacao">Classificação indicativa: <span class="icon">18</span></p>
                 <div class="botoes">
                     <a href="video.html">
                     <button role="button" class="botao">
