--- a/video.html
+++ b/video.html
@@ -7,7 +7,6 @@
     <title>Netflix Clone Demolidor Assistir</title>
     <link rel="stylesheet" href="style/video.css">
 
-
 </head>
 
 <body>
@@ -20,7 +19,7 @@
             </a>
         </div>
     </header>
-    <iframe class="video" width="1350" height="500" src="https://www.youtube.com/embed/y3GkQ6yoAA4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="video" src="https://www.youtube.com/embed/y3GkQ6yoAA4"></iframe>
 
     <script src="https://kit.fontawesome.com/a52273e8c9.js" crossorigin="anonymous"></script>
 
